--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -13,8 +13,16 @@ jobs:
     runs-on: windows-latest
 
     steps:
+
+    
+
+    - name: List directory contents
+      run: ls -lR Assets/Unity/src
+
     - name: Checkout repository
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+  with:
+      submodules: recursive
       
     - name: Verify MinGW installation
       run: gcc --version
