--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -20,7 +20,7 @@ jobs:
           submodules: recursive
 
       - name: List directory contents 
-        run: ls -lR tests/Unity/src 
+        run: dir tests/Unity/src 
 
       - name: Verify MinGW installation
         run: gcc --version
